--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.11",
-    "gsap": "^3.13.0"
+    "gsap": "^3.13.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.10"
+    "@types/bootstrap": "^5.2.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
